// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING TextField component WHEN the TextField component is rendered THEN it should match the snapshot 1`] = `
<View
  style={
    [
      {
        "position": "relative",
      },
    ]
  }
>
  <View
    style={
      {
        "left": 16,
        "position": "absolute",
        "top": 12,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "PoppinsMedium",
            "fontSize": 16,
            "fontWeight": 500,
          },
          {
            "fontWeight": 400,
          },
          {
            "color": "#0F172A",
          },
        ]
      }
    >
      Title
    </Text>
  </View>
  <TextInput
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="Search field"
    placeholderTextColor="#a3a3a3"
    style={
      [
        undefined,
        {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 8,
          "borderWidth": 1,
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 36,
        },
        {
          "fontFamily": "PoppinsRegular",
          "fontSize": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
    testID="textField__textInput"
    value="test"
  />
</View>
`;

exports[`TESTING TextField component WHEN the TextField has errors THEN it should match the snapshot 1`] = `
<View
  style={
    [
      {
        "position": "relative",
      },
    ]
  }
>
  <View
    style={
      {
        "left": 16,
        "position": "absolute",
        "top": 12,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "PoppinsMedium",
            "fontSize": 16,
            "fontWeight": 500,
          },
          {
            "fontWeight": 400,
          },
          {
            "color": "#0F172A",
          },
        ]
      }
    >
      Title
    </Text>
  </View>
  <TextInput
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="Search field"
    placeholderTextColor="#a3a3a3"
    style={
      [
        undefined,
        {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 8,
          "borderWidth": 1,
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 36,
        },
        {
          "fontFamily": "PoppinsRegular",
          "fontSize": 16,
        },
        {
          "borderColor": "#CC3333",
        },
      ]
    }
    testID="textField__textInput"
    value=""
  />
  <Text
    style={
      [
        {
          "fontFamily": "PoppinsRegular",
          "fontSize": 14,
        },
        {
          "fontWeight": 400,
        },
        {
          "color": "#CC3333",
          "paddingTop": 8,
        },
      ]
    }
    testID="textField__errorMessage"
  >
    Title is required.
  </Text>
</View>
`;
